--- a/blogpost.html
+++ b/blogpost.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Titulo del post</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Aquí vamos a hacer un post</h1>
-    <p>Bla bla bla
-    </p>
+    <div id="container">
+        <div id="post">
+            <h1>Título super wow</h1>
+            <p>Párrafo muy interesante de un tema aún más interesante. 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
