Estructura inicial de la cabecera.

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Título super wow</h1>
             <p>Párrafo muy interesante de un tema aún más interesante. 
