Agregado el contenido adicional del blog y nueva tipografía

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <h1>Título super wow</h1>
             <p>Párrafo muy interesante de un tema aún más interesante. 
             </p>
+            <p>Este es un párrafo adicional.</p>
         </div>
     </div>
 </body>
