Funte más mejor y más contenido

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
             <p>Párrafo muy interesante de un tema aún más interesante. 
             </p>
             <p>Este es un párrafo adicional.</p>
+            <p>Git y github son dos herramientas súper útiles y que me encantan.</p>
         </div>
     </div>
 </body>
