Agregué suscripción, cambié cabecera y body azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             ¡Hyperblog de Xavi!
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Título super wow</h1>
@@ -19,6 +19,7 @@
             </p>
             <p>Este es un párrafo adicional.</p>
             <p>Git y github son dos herramientas súper útiles y que me encantan.</p>
+            <p>Suscríbete y dale al like</p>
         </div>
     </div>
 </body>
