--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="images/dragon.png" />
             ¡Hyperblog de Xavi!
             <span id="tagline">Tu blog de cabecera</span>
         </div>
