Corrección de redacción

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="images/dragon.png" />
             ¡Hyperblog de Xavi!
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de Cabecera</span>
         </div>
         <div id="post">
             <h1>Título super wow</h1>
@@ -20,7 +20,7 @@
             </p>
             <p>Este es un párrafo adicional.</p>
             <p>Git y github son dos herramientas súper útiles y que me encantan.</p>
-            <p>Suscríbete y dale al like</p>
+            <p>Suscríbete y dale al like.</p>
         </div>
         <div id="footer">
             Hecho con amor en platzi.
