English version of the blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             <img id="logo" src="images/dragon.png" />
             ¡Hyperblog de Xavi!
-            <span id="tagline">Tu blog de Cabecera</span>
+            <span id="tagline">The greatest blog.</span>
         </div>
         <div id="post">
             <h1>Título super wow</h1>
